<resources>
    <string name="app_name">Oneshot</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_send">Send</string>
    <string name="action_receive">Receive</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="cant_get_ip">Can\'t get IP address</string>
    <string name="share_url">Share URL</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="download">Download</string>
</resources>